@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.561 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.562 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -165,3 +165,5 @@ Changes from NetBSD 3.0 to NetBSD 4.0:
 	postfix(1): Updated to 2.2.8. [rpaulo 20060109]
 	zlib: Updated to 1.2.3 and shared between kernel and userland.
 		[christos 20060114]
+	firmload: Add an API for loading firmware images used by hardware
+		devices.  [thorpej 20060116]
